**1.69.0** -
* Updated dependencies
* Bugfixes:
    - Building statistic graphs for Bottle Cap Factories show "plops" (#94)
    - Workers' Lodges initially dispaly a 100% production boost (#98)
    - Project based factory extension popover content positioning (#102)
    - Fix endless buff (#106)

**1.68.0** - 16.03.2020
* Add additional upgrade paths to the Beer Factories
* Update dependencies
* Update build process of the application

**1.67.0** - 10.01.2020
* Add a new ingredient to the Beer Blender Bar (#67)
* Refactored Beer Factories to represent the current factory production, storage and transport multiplier as a ComposedValue
* Bugfixes:
    - Equipping the Blueberry at the Beer Blender Bar leads to a NaN Mana per second display error
    - Fix unique build equipments (#92)
    - Fix auto cloning for Bottle Cap Factories (#95)

**1.66.0** - 15.12.2019
* Added cloning to Bottle Cap Factories (#87)
* Balanced Beerwarts
    - Increased magician price growing
    - Increased training price growing
    - Limited the training duration to max. 1000 days (#54)
* Moved the ComposedValueRegistry into a separate library
* Refactored BeerBank to represent the current investment as a ComposedValue
* Remove translated labels from the save state (#47)
* Update to Twig 3.0
* Bugfixes:
    - The owned plops label isn't reset after a sacrifice
    - Automated Bottle Cap Factory level up doesn't check if there are enough Bottle Cap Factories to level up
    - Recursion without break condition for build automation

**1.65.0** - 05.12.2019
* Added additional options to control production statistics
    - Option to disable production statistics (#82)
    - Option to display production graphs on a linear scale instead of logarithmic
* Optimize loading of the save state list (#83)
* Added basic building statistics to building details modal (#71)
* Automatically extend production statistic graphs if a building details modal stays open
* Bugfixes: