@@ -572,7 +572,7 @@
 
         <div class="building-buy-control secondary-border__bottom clearfix">
           <span>{{ translator.translate('buildings.buyCharge') }}:&nbsp;</span><br />
-          <div id="buy-amount-1" data-amount="1" class="buy-amount active">1</div>
+          <div id="buy-amount-1" data-amount="1" class="buy-amount">1</div>
           <div id="buy-amount-10" data-amount="10" class="buy-amount">10</div>
           <div id="buy-amount-100" data-amount="100" class="buy-amount">100</div>
           <div id="buy-amount-max" data-amount="max" class="buy-amount">
