@@ -1,4 +1,5 @@
 **1.69.0** -
+* Store the selected buy charge in the save state so it's still selected after a reload
 * Updated dependencies
 * Bugfixes:
     - Building statistic graphs for Bottle Cap Factories show "plops" (#94)
